--- a/TwitterClient/Base.lproj/LaunchScreen.storyboard
+++ b/TwitterClient/Base.lproj/LaunchScreen.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,18 +23,20 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KjU-r8-hue">
-                                <rect key="frame" x="148" y="323" width="79" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <rect key="frame" x="109" y="323" width="118" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="118" id="wlg-Ut-8FI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="KjU-r8-hue" secondAttribute="trailing" constant="148" id="GyU-II-PA5"/>
-                            <constraint firstItem="KjU-r8-hue" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="148" id="NgA-fq-q7K"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="KjU-r8-hue" secondAttribute="bottom" constant="323" id="alg-Vf-rk4"/>
-                            <constraint firstItem="KjU-r8-hue" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="303" id="sKx-gF-2uI"/>
+                            <constraint firstItem="KjU-r8-hue" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="303" id="1j3-Kl-nqi"/>
+                            <constraint firstItem="KjU-r8-hue" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="93" id="6FP-Zj-V0i"/>
+                            <constraint firstItem="KjU-r8-hue" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="R0U-1o-6Mm"/>
                         </constraints>
                     </view>
                 </viewController>
